<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AlarmApp</string>

    <string name="fab_add_new_alarm">Set New Alarm</string>
    <string name="alarm_time">15:15</string>
    <string name="tv_set_new_alarm">Set New Alarm</string>
    <string name="tv_alarm_time_text">Choose Time:</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="monday">MO</string>
    <string name="thursday">TH</string>
    <string name="saturday">SA</string>
    <string name="wednesday">WE</string>
    <string name="sunday">SU</string>
    <string name="friday">FR</string>
    <string name="tuesday">TU</string>
    <string name="btn_set_alarm">Set Alarm</string>
    <string name="btn_cancel_and_close"><![CDATA[Cancel]]></string>
    <string name="enter_alarm_label">Enter Alarm title</string>
    <string name="alarm_label">title:</string>
    <string name="repeat">Repeat</string>
    <string name="alarm_no_label">no title</string>
    <string name="delete_all_alarm">Delete All</string>
    <string name="tv_no_alarms_text">No Scheduled Alarms. Use the add button below to add new alarm.</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
    <string name="settings">Settings</string>

    <string name="no_label">No title</string>

    <!-- Settings -->

    <!-- Theme Preference -->
    <string name="title_dark_theme">Dark Theme</string>
    <string name="key_switch_theme">key_switch_theme</string>
    <string name="summary_dark_theme_on">Disable dark theme</string>
    <string name="summary_dark_theme_off">Enable dark theme</string>


    <!-- Ringtone -->

    <!-- Vibration -->
    <string name="title_vibrate">Vibrate</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="summary_vibrate_on">Turn vibration off</string>
    <string name="summary_vibrate_off">Turn vibration on</string>

    <!-- Snooze Time -->
    <string name="title_snooze_time">Snooze Time</string>
    <string name="key_snooze_time">key_snooze_time</string>
    <string name="summary_snooze_time">Click to select snooze time</string>

    <!-- About App-->


    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_terms">Terms &amp; Conditions</string>

    <string name="delete_empty_list">No alarms to delete</string>
    <string name="alarm_deleted">Alarm Deleted</string>
    <string name="alarm_cancelled">Alarm Cancelled</string>
    <string name="delete_all">All alarms deleted</string>
    <string name="alarm_app_channel_name">AlarmApp Channel</string>
    <string name="alarm_app_channel_description">Channel to send alarm notification for AlarmApp</string>
    <string name="alarm_dismissed">Alarm Dismissed</string>
    <string name="alarm_scheduled">Alarm scheduled for %1$s at: %2$s</string>

    <string name="ring_image">Ringing Image</string>
    <string name="snoozed_for">Snoozed for: %1$d minutes.</string>
    <string name="set_alarm_fragment_title">Add New Alarm</string>

    <string name="remain_time_full">%1$d hours and %2$d minutes from now</string>
    <string name="remain_time_hour_full">%1$d hour and %2$d minutes from now</string>
    <string name="remain_time_minutes">%1$d minutes from now</string>
    <string name="remain_time_minute">one minute from now</string>
    <string name="remain_time_less_than_minute">less than a minute from now</string>


    <string name="preference_file_key">com.example.alarmapp_preferences</string>
    <string name="alarm_home">Home</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="communicate">Communicate</string>
    <string name="alarm_settings">Alarm Settings</string>


</resources>